[project]
name = "google-maps-list-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-maps-list-filter",
    "folium>=0.19.6",
    "geojson>=3.2.0",
    "loguru>=0.7.3",
    "shapely>=2.1.1",
    "streamlit>=1.45.1",
    "streamlit-folium>=0.25.0",
    "ipykernel>=6.29.5",
    "googlemaps>=4.10.0",
    "dotenv>=0.9.9",
    "backoff>=2.2.1",
    "openai>=1.79.0",
    "pydantic>=2.11.4",
    "geopy>=2.4.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "google-maps-list-filter",
    "pytest>=8.3.5",
]

[tool.uv.sources]
google-maps-list-filter = { workspace = true }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["google_maps_list_filter"]
